--- a/SUSTech_Helper/SUSTech_Helper/author~.storyboard
+++ b/SUSTech_Helper/SUSTech_Helper/author~.storyboard
@@ -8,15 +8,30 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Storyboard Reference-->
-        <scene sceneID="1eO-5e-mv7">
+        <!--View Controller-->
+        <scene sceneID="Emd-WD-v0H">
             <objects>
-                <viewControllerPlaceholder id="bUh-8m-MBD" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="5np-cV-1dp"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PIm-lz-mec" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController id="n4n-Qn-Al4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EBd-3Z-s5U">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YeE-NZ-hDc">
+                                <rect key="frame" x="174" y="373" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="qTq-YY-aNQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="QXz-nA-Jem"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1vX-jX-ju4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="975" y="-213"/>
+            <point key="canvasLocation" x="-215" y="-599"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -34,7 +49,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <state key="normal" title="欢迎使用你科小助手"/>
                                         <connections>
-                                            <segue destination="Z2c-KL-JqC" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="dfp-bY-mn4"/>
+                                            <segue destination="n4n-Qn-Al4" kind="show" id="dfp-bY-mn4"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DhR-ph-8yt">
@@ -45,9 +60,6 @@
                                         <state key="normal" title="课程表（翘了几节课）">
                                             <color key="titleColor" red="0.99580377340000004" green="0.67457646130000004" blue="0.4626886845" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
-                                        <connections>
-                                            <segue destination="bUh-8m-MBD" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="Mip-ue-uzf"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="29v-TL-391">
                                         <rect key="frame" x="0.0" y="243" width="340" height="48"/>
@@ -107,16 +119,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="135.38461538461539" y="78.199052132701425"/>
-        </scene>
-        <!--author-->
-        <scene sceneID="nDY-gL-a7T">
-            <objects>
-                <viewControllerPlaceholder storyboardName="author" id="Z2c-KL-JqC" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="RY3-5j-jNL"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4QK-Cf-R5S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="868" y="-302"/>
         </scene>
     </scenes>
     <resources>
