--- a/SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Base.lproj/GPA~.storyboard
+++ b/SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Base.lproj/GPA~.storyboard
@@ -68,7 +68,7 @@
                                         <color key="tintColor" red="0.99562817810000004" green="0.65924984220000005" blue="0.41954076289999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="GPA（看看你挂了几科）"/>
                                         <connections>
-                                            <segue destination="bwP-DX-FI6" kind="presentation" modalPresentationStyle="currentContext" modalTransitionStyle="coverVertical" id="zPn-C5-t5D"/>
+                                            <segue destination="VUU-ka-vTS" kind="presentation" modalPresentationStyle="currentContext" modalTransitionStyle="coverVertical" id="zPn-C5-t5D"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Fn-uH-fls">
@@ -98,7 +98,7 @@
         <!--Item 2-->
         <scene sceneID="CZs-3R-AUx">
             <objects>
-                <viewController id="2ld-no-uWE" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UIViewController-2ld-no-uWE" id="2ld-no-uWE" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uYm-rD-tkf">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -114,8 +114,7 @@
         <!--Item 1-->
         <scene sceneID="Cj8-jE-sEU">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0TZ-dc-cpp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <viewController id="pcN-s1-17F" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UIViewController-pcN-s1-17F" id="pcN-s1-17F" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Lt2-RL-Dxm">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -124,25 +123,15 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="BNV-fT-qWO"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0TZ-dc-cpp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1193" y="-865"/>
         </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="tMR-n9-NLu">
+        <!--GPA-->
+        <scene sceneID="nX3-Bf-cts">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CTM-nE-q31" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tabBarController id="bwP-DX-FI6" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="NHH-eR-lxn"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0TX-42-fKl">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="pcN-s1-17F" kind="relationship" relationship="viewControllers" id="vdW-I8-Ku4"/>
-                        <segue destination="2ld-no-uWE" kind="relationship" relationship="viewControllers" id="cdS-LU-z24"/>
-                    </connections>
-                </tabBarController>
+                <viewControllerPlaceholder storyboardName="GPA" id="VUU-ka-vTS" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MRJ-us-0UJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="285" y="-562"/>
         </scene>
