--- a/SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Base.lproj/Main.storyboard
+++ b/SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Base.lproj/Main.storyboard
@@ -114,23 +114,38 @@
         <!--Item 1-->
         <scene sceneID="Cj8-jE-sEU">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0TZ-dc-cpp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <viewController id="pcN-s1-17F" sceneMemberID="viewController">
+                <viewController id="pcN-s1-17F" customClass="Button" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Lt2-RL-Dxm">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zkn-uj-jNO">
+                                <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="单科成绩运算" id="0gw-mi-mnN">
+                                        <barButtonItem key="leftBarButtonItem" image="arrowshape.turn.up.left.circle.fill" catalog="system" id="r59-R5-cXD">
+                                            <connections>
+                                                <action selector="back:" destination="YGf-Ls-5rG" id="MUN-iq-kRa"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Eya-ZR-Dyy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="BNV-fT-qWO"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0TZ-dc-cpp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="YGf-Ls-5rG" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1193" y="-865"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="tMR-n9-NLu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CTM-nE-q31" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController id="bwP-DX-FI6" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="NHH-eR-lxn"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0TX-42-fKl">
@@ -143,11 +158,13 @@
                         <segue destination="2ld-no-uWE" kind="relationship" relationship="viewControllers" id="cdS-LU-z24"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CTM-nE-q31" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="285" y="-562"/>
         </scene>
     </scenes>
     <resources>
+        <image name="arrowshape.turn.up.left.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="quaternarySystemFillColor">
             <color red="0.45490196078431372" green="0.45490196078431372" blue="0.50196078431372548" alpha="0.080000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
